# ecomerce-back

./: README.md  main.py  pyproject.toml
app/controllers/: product_controller.py
app/models/: product_model.py
app/repositories/: product_repository.py
app/services/: product_service.py
